Fix background for project columns

--- a/github-dark.sass
+++ b/github-dark.sass
@@ -1909,3 +1909,7 @@ li.session-device
 
 .cm-tag
   color: #63a35c !important
+
+.project-columns-container .project-column,
+.project-columns-container .project-column .Details,
+  background-color: $accent !important
